test/sema/typeck/literal/int64-overflow.out
error: number does not fit into type Int64.
--> int64-overflow.dora:1:19
 | fn f() { let _x = 9223372036854775808i64; }
                     ~~~~~~~~~~~~~~~~~~~~~~
 | 
1 error found.
