test/sema/typeck/literal/int64-overflow.dora
fn f() { let _x = 9223372036854775808i64; }
